<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorOnBackground"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_color_event" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:src="@color/white"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:strokeWidth="0dp">

                <FrameLayout
                    android:id="@+id/layout_image_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageBlur"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:scaleType="centerCrop"
                            android:src="@color/image_profile"
                            app:layout_constraintDimensionRatio="2:1"
                            tools:ignore="MissingConstraints,ContentDescription" />

                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:layout_constraintDimensionRatio="2:1"
                            tools:ignore="MissingConstraints,ContentDescription" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:scaleType="centerCrop"
                            android:src="@color/overlay_dark_20"
                            app:layout_constraintDimensionRatio="2:1"
                            tools:ignore="MissingConstraints,ContentDescription" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/editImage"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="bottom|right"
                        android:background="@drawable/button_image_add"
                        android:padding="5dp"
                        android:src="@drawable/ic_adds"
                        app:layout_constraintDimensionRatio="1:1"
                        app:tint="?mc_track"
                        tools:ignore="ContentDescription" />

                </FrameLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_album"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/name"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button4"
                    android:gravity="center"
                    android:inputType="textPersonName|textCapWords"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_list"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/description"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/descriptionEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button4"
                    android:gravity="center"
                    android:inputType="textMultiLine"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/ic_year"
                                app:tint="@color/white"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="5dp"
                                android:text="@string/year"
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/yearTil"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            app:hintEnabled="false">

                            <EditText
                                android:id="@+id/yearEt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/button4"
                                android:gravity="center"
                                android:inputType="number"
                                android:maxLength="4"
                                android:padding="15dp"
                                android:textColor="@color/white"
                                android:textSize="16sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/ic_users"
                                app:tint="@color/white"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="5dp"
                                android:text="@string/cast"
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/cast"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/button4"
                            android:drawablePadding="10dp"
                            android:gravity="center_vertical"
                            android:padding="15dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="16sp"
                            app:drawableEndCompat="@drawable/ic_down_gray"
                            app:drawableTint="@color/white" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/ic_time"
                                app:tint="@color/white"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="5dp"
                                android:text="@string/duration"
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/duration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginVertical="10dp"
                            android:background="@drawable/button4"
                            android:gravity="center"
                            android:padding="15dp"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_category_gray"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/category"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button4"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_down_gray"
                app:drawableTint="@color/white" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>